--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+:root {
+  --primary-color: #162149;
+  --secondary-color: #3bb94c;
+  --background-color: #ced8e4;
+  --white-color: #ffffff;
+}
+
 html,
 body {
-  background-color: #ced8e4;
+  background-color: var(--background-color);
+}
+
+button {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 5px;
+  padding: 0.5em 1em;
 }
 
 .wrapper {
@@ -14,7 +28,7 @@ body {
 }
 
 .reservations-list__item {
-  background-color: #ffffff;
+  background-color: var(--white-color);
   margin-bottom: 1em;
   display: grid;
   grid-template-columns: 0.4fr 1fr 0.1fr;
@@ -31,16 +45,16 @@ body {
   width: 300px;
 }
 .reservations-list__item__status--reserved {
-  color: #3bb94c;
+  color: var(--secondary-color);
 }
 
 .reservations-list__item__status--seated {
-  color: #162149;
+  color: var(--primary-color);
 }
 
 .reservation-detail {
-  width: 300px;
-  background-color: #ffffff;
+  width: 400px;
+  background-color: var(--white-color);
   border-radius: 20px;
   padding: 0.5em 1em;
 }
