--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(./reset.css);
+
 :root {
   --primary-color: #162149;
   --secondary-color: #3bb94c;
@@ -10,28 +12,43 @@ body {
   background-color: var(--background-color);
 }
 
-button {
-  background-color: var(--primary-color);
-  color: var(--white-color);
-  border-radius: 5px;
-  padding: 0.5em 1em;
+* {
+  box-sizing: border-box;
 }
 
 .wrapper {
-  width: 100%;
+  margin: 0 auto;
   display: flex;
   gap: 1em;
+  background-color: red;
+  max-width: 1000px;
+}
+
+/* mobile */
+@media (max-width: 1024px) {
+  .wrapper {
+    background-color: tomato;
+    width: 100%;
+    padding: 0 8px;
+  }
 }
 
 .reservations-list {
   width: 100%;
 }
 
+.reservations-list__button {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 5px;
+  padding: 0.5em 1em;
+}
+
 .reservations-list__item {
   background-color: var(--white-color);
   margin-bottom: 1em;
   display: grid;
-  grid-template-columns: 0.4fr 1fr 0.1fr;
+  grid-template-columns: 0.2fr 1fr 0.1fr;
   align-items: center;
   border-radius: 20px;
   padding: 0.5em 1em;
@@ -44,6 +61,15 @@ button {
   text-overflow: ellipsis;
   width: 300px;
 }
+
+/* mobile */
+@media (max-width: 1024px) {
+  .reservations-list__item__customerInfo,
+  .reservations-list__item__menus {
+    width: 50px;
+  }
+}
+
 .reservations-list__item__status--reserved {
   color: var(--secondary-color);
 }
@@ -57,4 +83,46 @@ button {
   background-color: var(--white-color);
   border-radius: 20px;
   padding: 0.5em 1em;
+}
+.reservation-detail__body {
+  text-align: center;
+}
+/* mobile */
+@media (max-width: 1024px) {
+  .reservation-detail {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 0;
+  }
+
+  .reservation-detail__body {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 600px;
+    padding: 40px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+    transform: translateX(-50%) translateY(-50%);
+  }
+}
+
+.reservation-detail__button {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .reservation-detail__button {
+    display: block;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+  }
 }
