--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
 .reservation-detail__body {
   text-align: center;
 }
+
 /* mobile */
 @media (max-width: 1024px) {
   .reservation-detail {
@@ -102,15 +103,30 @@ body {
 
   .reservation-detail__body {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 600px;
     padding: 40px;
     background-color: rgb(255, 255, 255);
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-    transform: translateX(-50%) translateY(-50%);
+
+    animation-name: slideIn;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
   }
 }
 
