--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ html,
 body {
   background-color: var(--background-color);
   line-height: 1.3;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 * {
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
@@ -73,7 +73,7 @@ h3 {
 }
 
 .reservations-list::-webkit-scrollbar-track {
-  background: rgba(33, 122, 244, 0.1);
+  background: rgba(22, 33, 73, 0.1);
 }
 
 .reservations-list__button {
@@ -88,7 +88,7 @@ h3 {
   background-color: var(--white-color);
   margin-bottom: 1em;
   display: grid;
-  grid-template-columns: 0.2fr 1fr 0.2fr;
+  grid-template-columns: 0.3fr 1fr 0.2fr;
   place-items: center;
   align-items: center;
   border-radius: 20px;
@@ -98,7 +98,7 @@ h3 {
 /* mobile */
 @media (max-width: 1024px) {
   .reservations-list__item {
-    grid-template-columns: 0.2fr 0.8fr 0.2fr;
+    grid-template-columns: 0.3fr 0.8fr 0.2fr;
   }
 }
 
@@ -118,16 +118,27 @@ h3 {
   }
 }
 
-.reservations-list__item__status--reserved {
-  color: var(--secondary-color);
+.reservation__status--reserved {
+  color: var(--secondary-color) !important;
+  background-color: rgba(59, 185, 76, 0.1);
+  padding: 0.3em 0.5em;
+  border-radius: 100px;
+  border: var(--secondary-color) 1px solid;
+  font-size: 0.75em;
 }
 
-.reservations-list__item__status--seated {
-  color: var(--primary-color);
+.reservation__status--seated {
+  color: var(--primary-color) !important;
+  background-color: rgba(22, 33, 73, 0.1);
+  padding: 0.3em 0.5em;
+  border-radius: 100px;
+  border: var(--primary-color) 1px solid;
+  font-size: 0.75em;
 }
 
 .reservation-detail {
-  width: 300px;
+  max-width: 350px;
+  width: 100%;
   background-color: var(--white-color);
   border-radius: 20px;
 }
@@ -136,42 +147,6 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2em;
-}
-
-.reservation-detail__ul {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: 100%;
-  gap: 0.5em;
-}
-
-.reservation-detail__ul li {
-  color: var(--grey-color);
-  width: 100%;
-}
-
-.reservation-detail__li--short {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.reservation-detail__li--long {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
-}
-
-.reservation-detail__li--long:last-child {
-  margin-top: 2em;
-}
-
-.reservation-detail__ul li strong {
-  color: var(--dark-color);
 }
 
 /* mobile */
@@ -181,6 +156,7 @@ h3 {
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100%;
     height: 100%;
     display: none;
     background-color: rgba(0, 0, 0, 0.4);
@@ -212,6 +188,41 @@ h3 {
     opacity: 1;
     transform: translateY(0%);
   }
+}
+
+.reservation-detail__ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+}
+
+.reservation-detail__ul li {
+  color: var(--grey-color);
+  width: 100%;
+  padding: 0.5em 0;
+}
+
+.reservation-detail__li--short {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.reservation-detail__li--long {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}
+
+.reservation-detail__li--long:last-child {
+  margin-top: 2em;
+}
+
+.reservation-detail__ul li strong {
+  color: var(--dark-color);
 }
 
 .reservation-detail__button {
